app/assets/stylesheets/offers.css
.offer-header {
    font-size: 0;
}

.offer-header * {
    font-size: 13px;
}

.status-inbox {
    background-color: #FF3059;
}

.btn-accept {
    background-color: #00aeed;
    color: white;
    font-size: 13px;
    padding: 3px 7px;
}

@media (max-width: 980px) {
    .btn-accept {
        font-size: 12px;
        padding: 3px 5px;
    }
}

.deny {
    text-decoration: underline;
    color: #fe5773;
    padding-left: 20px;
}

.inbox-logo-responsive {
    border: 1px solid #d7d7d7;
    border-radius: 50%;
    display: inline-block;
    height: 24px;
    vertical-align: top;
    width: 24px;

}

.offer-textarea {
    width: 100%;
    border-radius: 4px;
    resize: none;
    padding: 4px;
}

.reply-box-image {
    float: left;
    height: 20px;
    width: 20px;
}

.offers_table, .offers_table tbody tr td,
.starred_table, .starred_table tbody tr td {
    border: none;
}

.offers_table tbody tr td:nth-child(n+5):nth-child(-n+7),
.starred_table tbody tr td:nth-child(n+5):nth-child(-n+7) {
    font-family: 'Raleway', sans-serif;
    font-size: 13px;
}

.offers_table > tbody > tr:nth-child(n+7):nth-child(-n+11) > td {
    border-top: none;
    border-bottom: none;
    background: white;

}

.reply-message {
    font-size: 0.92em;
    display: block;
    margin-left: 30px;
}

.btn-compose {
    color: white;
    margin: 25px 5px 5px 5px;
    padding: 5px 26px;
    background-color: #f8c102;
    font-family: 'Raleway', sans-serif;
    font-weight: 600;
    font-size: 15px;
}

@media (max-width: 800px) {
    .btn-compose {
        padding: 5px 20px;
        font-size: 13px;
    }
}

@media (max-width: 480px) {
    .btn-compose {
        padding: 5px 18px;
        font-size: 11px;
    }
}

@media only screen and (max-width: 540px) {
    .offers_table tbody tr td,
    .starred_table tbody tr td {
        display: block;
    }
}

.star-del-ref-panel {
    text-align: right;
    margin-top: 15px;
}

.star-del-ref-panel a {
    padding: 10px 12px;

}

.star-grey {
    color: #d4d4d4;
    font-size: 22px;
}

.star-yellow {
    color: #f8c102;
    font-size: 22px;
}

.status-inbox {
    width: 10px;
    height: 10px;
    border-radius: 10px;
    display: inline-block;
}

.inbox-tab {
    margin: 0px 34px 0px 12px;
    font-family: 'Raleway', sans-serif;
    font-weight: 500;
    font-size: 13px;
    vertical-align: middle;
    display: inline-block;
    padding-bottom: 2px;
}

#starred_list .starred-tab {
    margin: 0px 26px 0px 7px;
    font-family: 'Raleway', sans-serif;
    font-weight: 500;
    font-size: 13px;
    vertical-align: middle;
    display: inline-block;
    padding-top: 2px;

}

.inbox-tab, .starred-tab {
    color: #555;
}

.offers_table tbody tr td:nth-child(n+1):nth-child(-n+4),
.starred_table tbody tr td:nth-child(n+1):nth-child(-n+4) {
    width: 35px;
}

.panel-offers {
    margin-bottom: 20px;
    background-color: #fff;
    border-left: 1px solid #ddd;
    border-right: 1px solid #ddd;
    border-bottom: 1px solid #ddd;
    border-radius: 0;
    padding: 20px 20px 0px 20px;
}

.btn-column {
    min-width: 200px;
}

.make-all-stared {
    cursor: pointer;
}

.offer-box {
    font-family: "Raleway", sans-serif;
    font-size: 13px;
}

.offer-box:last-child {
    margin-bottom: 40px;
}

.offer-box:nth-child(odd) {
    background-color: #f6f6f6;
}

.offer-box:nth-child(even) {
    background-color: #ffffff;
}

.offer-header div {
    display: inline-block;
    padding-bottom: 10px;
    padding-top: 10px;
    vertical-align: middle;
}

.read-status {
    padding-left: 10px;
    padding-right: 5px;
}

.select-offer {
    padding-left: 5px;
    padding-right: 10px;
}

.make-star {
    padding-left: 10px;
    padding-right: 5px;
}

.offer-message-sender {
    padding-left: 5px;
}

.title {
    display: inline-block;
    margin: 5px 0 0 10px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    width: 170px;
}

.offer-text {
    margin-left: 30px;
    width: 40%;
}

.offer-time {
    float: right;
    margin-right: 20px;
    font-family: 'Hind', sans-serif;
    font-weight: 500;
    font-size: 10.4pt;
    color: #666666;
}

.offer-body {
    padding-left: 158px;
    margin-top: 20px;

}

.message {
    margin-top: 15px;
    font-size: 0.92em;
}

.message .title {

}

.comment-box .offer-textarea {
    width: 70%;
}

.comment-box .btn-accept {
    margin-top: -72px;
    margin-left: 33px;
}

.delete-selected-offer {
    cursor: pointer;
    padding: 0 10px 0 20px;
}

/* checkbox design */
.offer-content {
    padding: 40px 20px;
}

.squaredFour input {
    cursor: pointer;
    position: relative;
    width: 20px;
    height: 20px;
    border-radius: 2px;
    background: -webkit-linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
    background: -moz-linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
    background: -o-linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
    background: -ms-linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
    background: linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fcfff4', endColorstr='#b3bead', GradientType=0);
}

@media (max-width: 768px) {
    .offer-header div {
        display: block;
    }

    .offer-time {
        float: none;
    }

    #inbox, #stared_inbox {
        border: 1px solid #ddd;
        margin-bottom: 20px;
    }

    .panel-offers #inbox .offer-header div, .panel-offers #stared_inbox .offer-header div {

        border-top: 1px solid #ddd;
        width: 100%;
        padding-left: 5px;
        text-align: center;
    }

    .offer-text {
        margin: 0;
    }

    .select-offer {
        padding-right: 0;
    }

    .offer-body {
        border-top: 1px solid #ddd;
        padding-left: 5px;

    }

    .comment-box {
        margin-top: 10px;
    }

    .comment-box .btn-accept {
        padding-left: 8px;
        margin-left: 2%;
    }

    .inbox-tab {
        margin: 0 12px;
    }

    #starred_list .starred-tab {
        margin: 0 7px;
    }

    .nav > li > a {
        padding: 10px;
    }

    /* todo If Sanmalireddy wants header name then add this line */
    /*.panel-offers #inbox .offer-header div:nth-of-type(3):before { content: "Campaign Name : "; font-weight: bold; }*/

}

